updated dedeuplicated output with new test sample CW

--- a/5a-Matching/5-results.ipynb
+++ b/5a-Matching/5-results.ipynb
@@ -169,11 +169,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-09-12T14:51:05.671582Z",
-     "iopub.status.busy": "2022-09-12T14:51:05.671342Z"
+     "iopub.execute_input": "2022-09-13T17:31:36.191544Z",
+     "iopub.status.busy": "2022-09-13T17:31:36.191279Z",
+     "iopub.status.idle": "2022-09-13T17:31:36.960202Z",
+     "shell.execute_reply": "2022-09-13T17:31:36.959501Z",
+     "shell.execute_reply.started": "2022-09-13T17:31:36.191516Z"
     },
     "tags": []
    },
@@ -205,7 +208,23 @@
       "NS:\n",
       "   rows: 36\n",
       "   perfect matches: 75%\n",
-      "   matches above 0.8: 94%\n"
+      "   matches above 0.8: 94%\n",
+      "ON:\n",
+      "   rows: 215228\n",
+      "   perfect matches: 58%\n",
+      "   matches above 0.8: 75%\n",
+      "PE:\n",
+      "   rows: 5\n",
+      "   perfect matches: 60%\n",
+      "   matches above 0.8: 80%\n",
+      "QC:\n",
+      "   rows: 241591\n",
+      "   perfect matches: 18%\n",
+      "   matches above 0.8: 48%\n",
+      "SK:\n",
+      "   rows: 114\n",
+      "   perfect matches: 31%\n",
+      "   matches above 0.8: 42%\n"
      ]
     }
    ],
