--- a/6-AssignCSDs/Test/Assign_NAICS.ipynb
+++ b/6-AssignCSDs/Test/Assign_NAICS.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 34,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-08-30T19:17:06.794985Z",
-     "iopub.status.busy": "2022-08-30T19:17:06.794731Z",
-     "iopub.status.idle": "2022-08-30T19:17:06.854550Z",
-     "shell.execute_reply": "2022-08-30T19:17:06.853855Z",
-     "shell.execute_reply.started": "2022-08-30T19:17:06.794958Z"
+     "iopub.execute_input": "2022-09-14T17:07:11.280428Z",
+     "iopub.status.busy": "2022-09-14T17:07:11.280148Z",
+     "iopub.status.idle": "2022-09-14T17:07:11.678087Z",
+     "shell.execute_reply": "2022-09-14T17:07:11.677281Z",
+     "shell.execute_reply.started": "2022-09-14T17:07:11.280400Z"
     },
     "tags": []
    },
@@ -22,7 +22,7 @@
     "import math\n",
     "\n",
     "\n",
-    "df = pd.read_csv(\"/home/jovyan/ODBiz/6-AssignCSDs/Test/Test_CSDs3.csv\")\n",
+    "df = pd.read_csv(\"/home/jovyan/ODBiz/6-AssignCSDs/Test/Test_CSDs4.csv\")\n",
     "\n",
     "# STEP 1\n",
     "# copy over NAICS values that already exist in the data\n",
@@ -95,19 +95,19 @@
     "\n",
     "\n",
     "#df.to_csv('/home/jovyan/ODBiz/6-AssignCSDs/Test/Filtred_NAICS.csv',index=False)\n",
-    "df.to_csv('/home/jovyan/ODBiz/6-AssignCSDs/Test/3NAICS_Test.csv', index=False)"
+    "df.to_csv('/home/jovyan/ODBiz/6-AssignCSDs/Test/4NAICS_Test.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 35,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-08-30T19:17:09.597933Z",
-     "iopub.status.busy": "2022-08-30T19:17:09.597667Z",
-     "iopub.status.idle": "2022-08-30T19:17:09.648523Z",
-     "shell.execute_reply": "2022-08-30T19:17:09.647838Z",
-     "shell.execute_reply.started": "2022-08-30T19:17:09.597900Z"
+     "iopub.execute_input": "2022-09-14T17:07:20.765744Z",
+     "iopub.status.busy": "2022-09-14T17:07:20.765472Z",
+     "iopub.status.idle": "2022-09-14T17:07:21.140227Z",
+     "shell.execute_reply": "2022-09-14T17:07:21.139440Z",
+     "shell.execute_reply.started": "2022-09-14T17:07:20.765716Z"
     },
     "tags": []
    },
@@ -173,19 +173,19 @@
     "\n",
     "#df.to_csv('/home/jovyan/ODBiz/6-AssignCSDs/Test/Filtred_NAICS.csv', index=False)\n",
     "\n",
-    "df.to_csv('/home/jovyan/ODBiz/6-AssignCSDs/Test/3NAICS_Test.csv', index= False)\n"
+    "df.to_csv('/home/jovyan/ODBiz/6-AssignCSDs/Test/4NAICS_Test.csv', index= False)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 36,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-08-30T19:17:13.254757Z",
-     "iopub.status.busy": "2022-08-30T19:17:13.254492Z",
-     "iopub.status.idle": "2022-08-30T19:17:13.284041Z",
-     "shell.execute_reply": "2022-08-30T19:17:13.283345Z",
-     "shell.execute_reply.started": "2022-08-30T19:17:13.254728Z"
+     "iopub.execute_input": "2022-09-14T17:07:58.771248Z",
+     "iopub.status.busy": "2022-09-14T17:07:58.770969Z",
+     "iopub.status.idle": "2022-09-14T17:07:58.954404Z",
+     "shell.execute_reply": "2022-09-14T17:07:58.953676Z",
+     "shell.execute_reply.started": "2022-09-14T17:07:58.771217Z"
     },
     "tags": []
    },
@@ -206,19 +206,19 @@
     "df['NAICS'] = (pd.to_numeric(df['NAICS'], errors= 'coerce').fillna(''))\n",
     "\n",
     "#df.to_csv('/home/jovyan/ODBiz/6-AssignCSDs/Test/Filtred_NAICS.csv', index=False)\n",
-    "df.to_csv('/home/jovyan/ODBiz/6-AssignCSDs/Test/3NAICS_Test.csv', index=False)"
+    "df.to_csv('/home/jovyan/ODBiz/6-AssignCSDs/Test/4NAICS_Test.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 37,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-08-30T19:17:15.357782Z",
-     "iopub.status.busy": "2022-08-30T19:17:15.357507Z",
-     "iopub.status.idle": "2022-08-30T19:17:15.386999Z",
-     "shell.execute_reply": "2022-08-30T19:17:15.385991Z",
-     "shell.execute_reply.started": "2022-08-30T19:17:15.357752Z"
+     "iopub.execute_input": "2022-09-14T17:08:01.687385Z",
+     "iopub.status.busy": "2022-09-14T17:08:01.687116Z",
+     "iopub.status.idle": "2022-09-14T17:08:01.920564Z",
+     "shell.execute_reply": "2022-09-14T17:08:01.919673Z",
+     "shell.execute_reply.started": "2022-09-14T17:08:01.687356Z"
     },
     "tags": []
    },
@@ -237,13 +237,20 @@
     "\n",
     "\n",
     "#df.to_csv('/home/jovyan/ODBiz/6-AssignCSDs/Test/Filtred_NAICS.csv', index=False)\n",
-    "df.to_csv('/home/jovyan/ODBiz/6-AssignCSDs/Test/3NAICS_Test.csv', index= False)"
+    "df.to_csv('/home/jovyan/ODBiz/6-AssignCSDs/Test/4NAICS_Test.csv', index= False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-09-14T17:08:04.295695Z",
+     "iopub.status.busy": "2022-09-14T17:08:04.295416Z",
+     "iopub.status.idle": "2022-09-14T17:08:04.772925Z",
+     "shell.execute_reply": "2022-09-14T17:08:04.772116Z",
+     "shell.execute_reply.started": "2022-09-14T17:08:04.295666Z"
+    },
     "tags": []
    },
    "outputs": [],
@@ -300,25 +307,26 @@
     "\n",
     "\n",
     "#df.to_csv('/home/jovyan/ODBiz/6-AssignCSDs/Test/Filtred_NAICS.csv', index=False)\n",
-    "df.to_csv('/home/jovyan/ODBiz/6-AssignCSDs/Test/3NAICS_Test.csv', index=False)\n",
+    "df.to_csv('/home/jovyan/ODBiz/6-AssignCSDs/Test/4NAICS_Test.csv', index=False)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 40,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-09-02T17:00:29.355034Z",
-     "iopub.status.busy": "2022-09-02T17:00:29.354792Z",
-     "iopub.status.idle": "2022-09-02T17:00:29.385104Z",
-     "shell.execute_reply": "2022-09-02T17:00:29.384204Z",
-     "shell.execute_reply.started": "2022-09-02T17:00:29.355007Z"
-    }
+     "iopub.execute_input": "2022-09-14T17:08:19.787418Z",
+     "iopub.status.busy": "2022-09-14T17:08:19.787119Z",
+     "iopub.status.idle": "2022-09-14T17:08:19.978729Z",
+     "shell.execute_reply": "2022-09-14T17:08:19.978015Z",
+     "shell.execute_reply.started": "2022-09-14T17:08:19.787388Z"
+    },
+    "tags": []
    },
    "outputs": [],
    "source": [
-    "df.to_csv('/home/jovyan/ODBiz/Deduplication/ODHF_copy/inputs/1NAICS_Test.csv', index=False)"
+    "df.to_csv('/home/jovyan/ODBiz/7-Deduplication/inputs/4NAICS_Test.csv', index=False)"
    ]
   },
   {
