--- a/6-AssignCSDs/Test/CSD_Testing.ipynb
+++ b/6-AssignCSDs/Test/CSD_Testing.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-08-30T16:53:45.752103Z",
-     "iopub.status.busy": "2022-08-30T16:53:45.751631Z",
-     "iopub.status.idle": "2022-08-30T16:54:00.695659Z",
-     "shell.execute_reply": "2022-08-30T16:54:00.694805Z",
-     "shell.execute_reply.started": "2022-08-30T16:53:45.752069Z"
+     "iopub.execute_input": "2022-09-14T17:05:17.840226Z",
+     "iopub.status.busy": "2022-09-14T17:05:17.839567Z",
+     "iopub.status.idle": "2022-09-14T17:05:32.296163Z",
+     "shell.execute_reply": "2022-09-14T17:05:32.295067Z",
+     "shell.execute_reply.started": "2022-09-14T17:05:17.840188Z"
     },
     "tags": []
    },
@@ -42,28 +42,28 @@
     "\n",
     "#create sample data set \n",
     "n = sum(1 for line in open(newfile)) - 1                                  # number of records in file (excludes header)\n",
-    "s = 1000                                                                  # desired sample size = 1000\n",
+    "s = 1000                                                                # desired sample size = 1000\n",
     "skip = sorted(random.sample(range(1,n+1),n-s))                            # the 0-indexed header will not be included in the skip list\n",
     "df = pd.read_csv(newfile, skiprows=skip)\n",
     "\n",
     "df = pd.DataFrame(df)\n",
     "\n",
     "\n",
-    "df.to_csv('/home/jovyan/ODBiz/6-AssignCSDs/Test/Sample3.csv', index=False)  \n",
+    "df.to_csv('/home/jovyan/ODBiz/6-AssignCSDs/Test/Sample.csv', index=False)  \n",
     "\n",
     "#df.to_csv('/home/jovyan/ODBiz/6-AssignCSDs/Test/Sample_Set_1000.csv', index=False)     # save to Sample Set file "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-09-01T15:08:57.848527Z",
-     "iopub.status.busy": "2022-09-01T15:08:57.847768Z",
-     "iopub.status.idle": "2022-09-01T15:08:59.686686Z",
-     "shell.execute_reply": "2022-09-01T15:08:59.685374Z",
-     "shell.execute_reply.started": "2022-09-01T15:08:57.848494Z"
+     "iopub.execute_input": "2022-09-14T17:06:23.063504Z",
+     "iopub.status.busy": "2022-09-14T17:06:23.063031Z",
+     "iopub.status.idle": "2022-09-14T17:06:26.423265Z",
+     "shell.execute_reply": "2022-09-14T17:06:26.422432Z",
+     "shell.execute_reply.started": "2022-09-14T17:06:23.063475Z"
     },
     "tags": []
    },
@@ -102,7 +102,7 @@
     "\n",
     "\n",
     "df.to_csv('/home/jovyan/ODBiz/6-AssignCSDs/Test/Test_CSDs.csv', index=False)\n",
-    "df.to_csv('/home/jovyan/ODBiz/Deduplication/ODHF_copy/inputs/Test_CSDs.csv', index=False)"
+    "#df.to_csv('/home/jovyan/ODBiz/7-Deduplication/inputs/Test_CSDs.csv', index=False)"
    ]
   },
   {
