--- a/7-Deduplication/3_scratch_duplicates_PC.ipynb
+++ b/7-Deduplication/3_scratch_duplicates_PC.ipynb
@@ -15,11 +15,18 @@
    },
    "outputs": [],
    "source": [
+    "\n",
+    "#not using because we don't have a clear hierarchy skip to next step \n",
+    "\n",
+    "\n",
+    "\"\"\" \n",
+    "\n",
+    "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
     "#read database file used in 7-Dedup.\n",
-    "final = pd.read_csv(\"inputs/assigned_CSDs.csv\", low_memory=False)\n",
+    "final = pd.read_csv(\"inputs/1NAICS_Test.csv\", low_memory=False)\n",
     "\n",
     "#read dedupe file\n",
     "#df = pd.read_csv(\"outputs/probable_duplicates_PC.csv\")\n",
@@ -38,19 +45,26 @@
     "        check_name1 = final.loc[final.idx == id1].business_name.item()\n",
     "        check_name2 = final.loc[final.idx == id2].business_name.item()\n",
     "        check_addr1 = final.loc[final.idx == id1].street_name.item()\n",
-    "        check_addr2 = final.loc[final.idx == id2].street_name.item()\n",
+    "        check_addr2 = final.loc[final.idx == id2].street_name.item()        \n",
+    "        check_stat1 = final.loc[final.idx == id1].status.item()\n",
+    "        check_stat2 = final.loc[final.idx == id2].status.item()\n",
+    "        check_date1 = final.loc[final.idx == id1].date_established.item()\n",
+    "        check_date2 = final.loc[final.idx == id2].date_established.item()\n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        \n",
     "\n",
-    "        #filename_priority = ['QC_healthcare_facilities.csv', 'QC_Gatineau_public_places_including_hospitals,csv', 'QC_Quebec_City_public_places.csv', \n",
-    "         #                    'ON_Ottawa_hospital.csv', 'ON_Durham_healthcare_facilities.csv', 'ON_healthcare_facilities.csv', 'NB_hospital_horizon.csv', 'NB_nursing_homes.csv']\n",
+    "        status_priority = ['Open']\n",
     "\n",
     "        facilityname_priority = ['hospital', 'hôpita','hopita']\n",
     "\n",
-    "        if filename_priority.count(check_file1) == 1:\n",
+    "        if status_priority.count(check_stat1) == 1:\n",
     "\n",
-    "            if filename_priority.count(check_file2) == 1:\n",
+    "            if status_priority.count(check_stat2) == 1:\n",
     "\n",
-    "                priority1 = filename_priority.index(check_file1)\n",
-    "                priority2 = filename_priority.index(check_file2)\n",
+    "                priority1 = status_priority.index(check_stat1)\n",
+    "                priority2 = status_priority.index(check_stat2)\n",
     "\n",
     "                if priority1 > priority2:\n",
     "                    return id1\n",
@@ -58,9 +72,9 @@
     "                    return id2\n",
     "                elif priority1 == priority2:\n",
     "\n",
-    "                    if any(substring in check_name1.lower() for substring in facilityname_priority):\n",
+    "                    if any(substring in check_date1.lower() for substring in facilityname_priority):\n",
     "                        return id2\n",
-    "                    elif any(substring in check_name2.lower() for substring in facilityname_priority):\n",
+    "                    elif any(substring in check_date2.lower() for substring in facilityname_priority):\n",
     "                        return id1\n",
     "                    else:\n",
     "                        return id2\n",
@@ -98,19 +112,24 @@
     "\n",
     "\n",
     "df[\"to_remove\"] = df.apply(lambda x: hierarchy(id1 = x.idx1, id2 = x.idx2), axis = 1)\n",
-    "#df.to_csv('test.csv')\n"
+    "#df.to_csv('test.csv')\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\"\"\" \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-09-12T16:39:32.869462Z",
-     "iopub.status.busy": "2022-09-12T16:39:32.869127Z",
-     "iopub.status.idle": "2022-09-12T16:39:33.452035Z",
-     "shell.execute_reply": "2022-09-12T16:39:33.451202Z",
-     "shell.execute_reply.started": "2022-09-12T16:39:32.869383Z"
+     "iopub.execute_input": "2022-09-14T17:40:02.069334Z",
+     "iopub.status.busy": "2022-09-14T17:40:02.069059Z",
+     "iopub.status.idle": "2022-09-14T17:40:02.190228Z",
+     "shell.execute_reply": "2022-09-14T17:40:02.189494Z",
+     "shell.execute_reply.started": "2022-09-14T17:40:02.069305Z"
     },
     "tags": []
    },
@@ -123,11 +142,14 @@
     "import numpy as np\n",
     "\n",
     "#read database file used in 7-Dedup.\n",
-    "final = pd.read_csv(\"inputs/1NAICS_Test.csv\", low_memory=False)\n",
+    "final = pd.read_csv(\"inputs/4NAICS_Test.csv\", low_memory=False)\n",
     "\n",
     "#read dedupe file\n",
     "#df = pd.read_csv(\"outputs/probable_duplicates_PC.csv\")\n",
     "df = pd.read_csv(\"outputs/pairs_PC.csv\")\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "def check_1(address, distance, name, streetnumber):\n",
     "\n",
@@ -145,19 +167,19 @@
     "                          name = x.Name_CS,\n",
     "                          streetnumber = x.StrNum_Match), axis=1)\n",
     "\n",
-    "df.to_csv('test.csv')"
+    "#df.to_csv('test.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-09-12T16:39:36.152916Z",
-     "iopub.status.busy": "2022-09-12T16:39:36.152585Z",
-     "iopub.status.idle": "2022-09-12T16:39:36.161014Z",
-     "shell.execute_reply": "2022-09-12T16:39:36.159973Z",
-     "shell.execute_reply.started": "2022-09-12T16:39:36.152880Z"
+     "iopub.execute_input": "2022-09-14T17:40:04.488821Z",
+     "iopub.status.busy": "2022-09-14T17:40:04.488499Z",
+     "iopub.status.idle": "2022-09-14T17:40:04.496333Z",
+     "shell.execute_reply": "2022-09-14T17:40:04.495527Z",
+     "shell.execute_reply.started": "2022-09-14T17:40:04.488788Z"
     },
     "tags": []
    },
@@ -181,14 +203,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-09-12T16:39:38.784995Z",
-     "iopub.status.busy": "2022-09-12T16:39:38.784586Z",
-     "iopub.status.idle": "2022-09-12T16:39:38.793580Z",
-     "shell.execute_reply": "2022-09-12T16:39:38.792738Z",
-     "shell.execute_reply.started": "2022-09-12T16:39:38.784962Z"
+     "iopub.execute_input": "2022-09-14T17:40:06.286271Z",
+     "iopub.status.busy": "2022-09-14T17:40:06.286003Z",
+     "iopub.status.idle": "2022-09-14T17:40:06.295120Z",
+     "shell.execute_reply": "2022-09-14T17:40:06.294337Z",
+     "shell.execute_reply.started": "2022-09-14T17:40:06.286244Z"
     },
     "tags": []
    },
@@ -212,14 +234,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-09-12T16:39:42.233566Z",
-     "iopub.status.busy": "2022-09-12T16:39:42.233304Z",
-     "iopub.status.idle": "2022-09-12T16:39:42.242387Z",
-     "shell.execute_reply": "2022-09-12T16:39:42.241525Z",
-     "shell.execute_reply.started": "2022-09-12T16:39:42.233538Z"
+     "iopub.execute_input": "2022-09-14T17:40:07.891812Z",
+     "iopub.status.busy": "2022-09-14T17:40:07.891522Z",
+     "iopub.status.idle": "2022-09-14T17:40:07.900232Z",
+     "shell.execute_reply": "2022-09-14T17:40:07.899504Z",
+     "shell.execute_reply.started": "2022-09-14T17:40:07.891779Z"
     },
     "tags": []
    },
@@ -243,14 +265,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-09-12T16:39:45.128745Z",
-     "iopub.status.busy": "2022-09-12T16:39:45.128428Z",
-     "iopub.status.idle": "2022-09-12T16:39:45.137148Z",
-     "shell.execute_reply": "2022-09-12T16:39:45.136412Z",
-     "shell.execute_reply.started": "2022-09-12T16:39:45.128710Z"
+     "iopub.execute_input": "2022-09-14T17:40:09.923219Z",
+     "iopub.status.busy": "2022-09-14T17:40:09.922926Z",
+     "iopub.status.idle": "2022-09-14T17:40:09.931580Z",
+     "shell.execute_reply": "2022-09-14T17:40:09.930696Z",
+     "shell.execute_reply.started": "2022-09-14T17:40:09.923189Z"
     },
     "tags": []
    },
@@ -275,14 +297,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-09-12T16:39:48.983840Z",
-     "iopub.status.busy": "2022-09-12T16:39:48.983540Z",
-     "iopub.status.idle": "2022-09-12T16:39:49.049115Z",
-     "shell.execute_reply": "2022-09-12T16:39:49.048263Z",
-     "shell.execute_reply.started": "2022-09-12T16:39:48.983808Z"
+     "iopub.execute_input": "2022-09-14T17:40:12.291431Z",
+     "iopub.status.busy": "2022-09-14T17:40:12.291166Z",
+     "iopub.status.idle": "2022-09-14T17:40:12.706524Z",
+     "shell.execute_reply": "2022-09-14T17:40:12.705775Z",
+     "shell.execute_reply.started": "2022-09-14T17:40:12.291405Z"
     },
     "tags": []
    },
