updates to matching and csd scripts

--- a/5a-Matching/0_matching_main.ipynb
+++ b/5a-Matching/0_matching_main.ipynb
@@ -2,24 +2,39 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-09-15T19:20:59.711883Z",
-     "iopub.status.busy": "2022-09-15T19:20:59.711612Z"
+     "iopub.execute_input": "2022-09-15T22:42:45.084142Z",
+     "iopub.status.busy": "2022-09-15T22:42:45.083841Z",
+     "iopub.status.idle": "2022-09-15T22:42:45.089098Z",
+     "shell.execute_reply": "2022-09-15T22:42:45.088159Z",
+     "shell.execute_reply.started": "2022-09-15T22:42:45.084109Z"
     },
     "tags": []
    },
    "outputs": [],
    "source": [
-    "## oda_download.py \n",
     "import sys\n",
     "\n",
     "import oda_download\n",
     "import oda_formatting\n",
-    "import address_formatting\n",
-    "import address_match\n",
-    "import post_process\n"
+    "import address_format\n",
+    "import pre_processing\n",
+    "import address_matching\n",
+    "import post_processing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# Downloads the ODA data files for each province and saves them in data/oda_addresses\n",
+    "oda_download.main()"
    ]
   },
   {
@@ -28,11 +43,63 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
+    "# Applies formatting to street name columns in the ODA datasets. \n",
+    "# Takes in arguments of the files to be formatted and stores all outputs in data/oda_addresses/formatted.\n",
+    "oda_formatting.main()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Applies formatting to street names. \n",
+    "# Takes in arguments of the files to be formatted and stores all outputs in data/formatted.\n",
+    "# Might take up to 5 or so hours to complete\n",
+    "address_formatting.main()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Removes duplicate addresses and rows without street address data needed for matching.\n",
+    "pre_processing.main()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Takes in our source dataset and ODA datasets to match against. \n",
+    "# Outputs a csv of matched data for each province and one complete csv for the entire dataset in data/output\n",
+    "# Can take around 36 hours to complete\n",
+    "address_match.main()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Adds back in any data that has been removed for geocoding. \n",
+    "post_process.main()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def main():\n",
-    "    # stuff i want to run\n",
-    "\n",
+    "    \n",
     "if __name__ == \"__main__\":\n",
     "    main()"
    ]
