--- a/7-Deduplication/ODHF_copy/3_scratch_duplicates_PC.ipynb
+++ b/7-Deduplication/ODHF_copy/3_scratch_duplicates_PC.ipynb
@@ -40,8 +40,8 @@
     "        check_addr1 = final.loc[final.idx == id1].street_name.item()\n",
     "        check_addr2 = final.loc[final.idx == id2].street_name.item()\n",
     "\n",
-    "        #filename_priority = ['QC_healthcare_facilities.csv', 'QC_Gatineau_public_places_including_hospitals,csv', 'QC_Quebec_City_public_places.csv', \n",
-    "         #                    'ON_Ottawa_hospital.csv', 'ON_Durham_healthcare_facilities.csv', 'ON_healthcare_facilities.csv', 'NB_hospital_horizon.csv', 'NB_nursing_homes.csv']\n",
+    "        filename_priority = ['QC_healthcare_facilities.csv', 'QC_Gatineau_public_places_including_hospitals,csv', 'QC_Quebec_City_public_places.csv', \n",
+    "                             'ON_Ottawa_hospital.csv', 'ON_Durham_healthcare_facilities.csv', 'ON_healthcare_facilities.csv', 'NB_hospital_horizon.csv', 'NB_nursing_homes.csv']\n",
     "\n",
     "        facilityname_priority = ['hospital', 'hôpita','hopita']\n",
     "\n",
