--- a/7-Deduplication/3_scratch_duplicates_PC.ipynb
+++ b/7-Deduplication/3_scratch_duplicates_PC.ipynb
@@ -19,7 +19,7 @@
     "#not using because we don't have a clear hierarchy skip to next step \n",
     "\n",
     "\n",
-    "\"\"\" \n",
+    "\n",
     "\n",
     "\n",
     "import pandas as pd\n",
@@ -33,8 +33,10 @@
     "df = pd.read_csv(\"outputs/pairs_PC.csv\")\n",
     "\n",
     "\n",
-    "def hierarchy(id1, id2): \n",
-    "    \n",
+    "\n",
+    "\n",
+    "def hierarchy(id1, id2):\n",
+    "\n",
     "    try:\n",
     "\n",
     "        \n",
@@ -47,9 +49,7 @@
     "        check_addr1 = final.loc[final.idx == id1].street_name.item()\n",
     "        check_addr2 = final.loc[final.idx == id2].street_name.item()        \n",
     "        check_stat1 = final.loc[final.idx == id1].status.item()\n",
-    "        check_stat2 = final.loc[final.idx == id2].status.item()\n",
-    "        check_date1 = final.loc[final.idx == id1].date_established.item()\n",
-    "        check_date2 = final.loc[final.idx == id2].date_established.item()\n",
+    "\n",
     "        \n",
     "        \n",
     "        \n",
@@ -116,25 +116,27 @@
     "\n",
     "\n",
     "\n",
-    "\n",
-    "\"\"\" \n"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-09-14T17:40:02.069334Z",
-     "iopub.status.busy": "2022-09-14T17:40:02.069059Z",
-     "iopub.status.idle": "2022-09-14T17:40:02.190228Z",
-     "shell.execute_reply": "2022-09-14T17:40:02.189494Z",
-     "shell.execute_reply.started": "2022-09-14T17:40:02.069305Z"
-    },
-    "tags": []
+     "iopub.execute_input": "2022-09-20T15:59:26.440287Z",
+     "iopub.status.busy": "2022-09-20T15:59:26.440032Z",
+     "iopub.status.idle": "2022-09-20T15:59:26.645925Z",
+     "shell.execute_reply": "2022-09-20T15:59:26.645017Z",
+     "shell.execute_reply.started": "2022-09-20T15:59:26.440259Z"
+    }
    },
    "outputs": [],
    "source": [
+    "\n",
+    "#not using because we don't have a clear hierarchy skip to next step \n",
+    "\n",
+    "\n",
     "\n",
     "\n",
     "\n",
@@ -147,6 +149,110 @@
     "#read dedupe file\n",
     "#df = pd.read_csv(\"outputs/probable_duplicates_PC.csv\")\n",
     "df = pd.read_csv(\"outputs/pairs_PC.csv\")\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "def hierarchy(id1, id2):\n",
+    "\n",
+    "    try:\n",
+    "\n",
+    "        \n",
+    "        check_NAICS1 = final.loc[final.idx == id1].NAICS_Group.item()\n",
+    "        check_NAICS2 = final.loc[final.idx == id2].NAICS_Group.item()\n",
+    "        check_file1 = final.loc[final.idx == id1].localfile.item()\n",
+    "        check_file2 = final.loc[final.idx == id2].localfile.item()\n",
+    "        check_name1 = final.loc[final.idx == id1].business_name.item()\n",
+    "        check_name2 = final.loc[final.idx == id2].business_name.item()\n",
+    "        check_addr1 = final.loc[final.idx == id1].street_name.item()\n",
+    "        check_addr2 = final.loc[final.idx == id2].street_name.item()        \n",
+    "        check_stat1 = final.loc[final.idx == id1].status.item()\n",
+    "        check_stat2 = final.loc[final.idx == id2].status.item()\n",
+    "\n",
+    "          \n",
+    "        \n",
+    "\n",
+    "        status_priority = ['Open']\n",
+    "\n",
+    "       \n",
+    "\n",
+    "        if status_priority.count(check_stat1) == 1:\n",
+    "\n",
+    "            if status_priority.count(check_stat2) == 1:\n",
+    "\n",
+    "                priority1 = status_priority.index(check_stat1)\n",
+    "                priority2 = status_priority.index(check_stat2)\n",
+    "\n",
+    "                if priority1 > priority2:\n",
+    "                    return id1\n",
+    "                elif priority1 < priority2:\n",
+    "                    return id2\n",
+    "                elif priority1 == priority2:\n",
+    "                    return id1\n",
+    "\n",
+    "                    #if any(substring in check_date1.lower() for substring in facilityname_priority):\n",
+    "                      #  return id2\n",
+    "                    #elif any(substring in check_date2.lower() for substring in facilityname_priority):\n",
+    "                     #   return id1\n",
+    "                    #else:\n",
+    "                     #   return id2\n",
+    "\n",
+    "            elif status_priority.count(check_file2) == 0:\n",
+    "                return id2\n",
+    "\n",
+    "        elif status_priority.count(check_file1) == 0:\n",
+    "\n",
+    "            if status_priority.count(check_file2) == 1:\n",
+    "                return id1\n",
+    "\n",
+    "            elif status_priority.count(check_file2) == 0:\n",
+    "                \n",
+    "                if check_addr1 == np.nan and check_addr2 != np.nan:\n",
+    "                    return id1\n",
+    "\n",
+    "                if check_addr1 != np.nan and check_addr2 == np.nan:\n",
+    "                    return id2\n",
+    "\n",
+    "                if (check_addr1 == np.nan and check_addr2 == np.nan) or (check_addr1 != np.nan and check_addr2 != np.nan):\n",
+    "                    return id1\n",
+    "\n",
+    "                    #if check_file1 == 'CIHI_healthcare_facilities.csv' and check_file2 != 'CIHI_healthcare_facilities.csv':\n",
+    "                     #   return id1\n",
+    "\n",
+    "                    #elif check_file2 == 'CIHI_healthcare_facilities.csv' and check_file1 != 'CIHI_healthcare_facilities.csv':\n",
+    "                     #   return id2\n",
+    "\n",
+    "            \n",
+    "                \n",
+    "                \n",
+    "                \n",
+    "                \n",
+    "                \n",
+    "\n",
+    "\n",
+    "    except ValueError:\n",
+    "        return \"Item not found.\"\n",
+    "\n",
+    "\n",
+    "df[\"to_remove\"] = df.apply(lambda x: hierarchy(id1 = x.idx1, id2 = x.idx2), axis = 1)\n",
+    "#df.to_csv('test.csv')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-09-20T15:59:30.870729Z",
+     "iopub.status.busy": "2022-09-20T15:59:30.870486Z",
+     "iopub.status.idle": "2022-09-20T15:59:30.878846Z",
+     "shell.execute_reply": "2022-09-20T15:59:30.878108Z",
+     "shell.execute_reply.started": "2022-09-20T15:59:30.870703Z"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
     "\n",
     "\n",
     "\n",
@@ -172,14 +278,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-09-14T17:40:04.488821Z",
-     "iopub.status.busy": "2022-09-14T17:40:04.488499Z",
-     "iopub.status.idle": "2022-09-14T17:40:04.496333Z",
-     "shell.execute_reply": "2022-09-14T17:40:04.495527Z",
-     "shell.execute_reply.started": "2022-09-14T17:40:04.488788Z"
+     "iopub.execute_input": "2022-09-20T15:59:36.457786Z",
+     "iopub.status.busy": "2022-09-20T15:59:36.457512Z",
+     "iopub.status.idle": "2022-09-20T15:59:36.465665Z",
+     "shell.execute_reply": "2022-09-20T15:59:36.464887Z",
+     "shell.execute_reply.started": "2022-09-20T15:59:36.457759Z"
     },
     "tags": []
    },
@@ -203,14 +309,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-09-14T17:40:06.286271Z",
-     "iopub.status.busy": "2022-09-14T17:40:06.286003Z",
-     "iopub.status.idle": "2022-09-14T17:40:06.295120Z",
-     "shell.execute_reply": "2022-09-14T17:40:06.294337Z",
-     "shell.execute_reply.started": "2022-09-14T17:40:06.286244Z"
+     "iopub.execute_input": "2022-09-20T15:59:39.421322Z",
+     "iopub.status.busy": "2022-09-20T15:59:39.421024Z",
+     "iopub.status.idle": "2022-09-20T15:59:39.429865Z",
+     "shell.execute_reply": "2022-09-20T15:59:39.428904Z",
+     "shell.execute_reply.started": "2022-09-20T15:59:39.421291Z"
     },
     "tags": []
    },
@@ -234,14 +340,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 23,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-09-14T17:40:07.891812Z",
-     "iopub.status.busy": "2022-09-14T17:40:07.891522Z",
-     "iopub.status.idle": "2022-09-14T17:40:07.900232Z",
-     "shell.execute_reply": "2022-09-14T17:40:07.899504Z",
-     "shell.execute_reply.started": "2022-09-14T17:40:07.891779Z"
+     "iopub.execute_input": "2022-09-20T15:59:42.712313Z",
+     "iopub.status.busy": "2022-09-20T15:59:42.712040Z",
+     "iopub.status.idle": "2022-09-20T15:59:42.720074Z",
+     "shell.execute_reply": "2022-09-20T15:59:42.719385Z",
+     "shell.execute_reply.started": "2022-09-20T15:59:42.712273Z"
     },
     "tags": []
    },
@@ -265,14 +371,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 24,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-09-14T17:40:09.923219Z",
-     "iopub.status.busy": "2022-09-14T17:40:09.922926Z",
-     "iopub.status.idle": "2022-09-14T17:40:09.931580Z",
-     "shell.execute_reply": "2022-09-14T17:40:09.930696Z",
-     "shell.execute_reply.started": "2022-09-14T17:40:09.923189Z"
+     "iopub.execute_input": "2022-09-20T15:59:45.284204Z",
+     "iopub.status.busy": "2022-09-20T15:59:45.283940Z",
+     "iopub.status.idle": "2022-09-20T15:59:45.292771Z",
+     "shell.execute_reply": "2022-09-20T15:59:45.291927Z",
+     "shell.execute_reply.started": "2022-09-20T15:59:45.284175Z"
     },
     "tags": []
    },
@@ -297,14 +403,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 26,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-09-14T17:40:12.291431Z",
-     "iopub.status.busy": "2022-09-14T17:40:12.291166Z",
-     "iopub.status.idle": "2022-09-14T17:40:12.706524Z",
-     "shell.execute_reply": "2022-09-14T17:40:12.705775Z",
-     "shell.execute_reply.started": "2022-09-14T17:40:12.291405Z"
+     "iopub.execute_input": "2022-09-20T16:00:55.870694Z",
+     "iopub.status.busy": "2022-09-20T16:00:55.870417Z",
+     "iopub.status.idle": "2022-09-20T16:00:56.249920Z",
+     "shell.execute_reply": "2022-09-20T16:00:56.249151Z",
+     "shell.execute_reply.started": "2022-09-20T16:00:55.870664Z"
     },
     "tags": []
    },
@@ -319,14 +425,14 @@
     "df_true = df.loc[rows]\n",
     "df_false = df.loc[false_rows]\n",
     "\n",
-    "df_true.to_csv('outputs/duplicates_PC.csv', index=False)\n",
-    "df_false.to_csv('outputs/NOT_duplicates_PC.csv', index=False)\n",
+    "df_true.to_csv('outputs/2duplicates_PC.csv', index=False)\n",
+    "df_false.to_csv('outputs/2NOT_duplicates_PC.csv', index=False)\n",
     "\n",
-    "hashes = df_true #['to_remove'].tolist()\n",
+    "hashes = df_true['to_remove'].tolist()\n",
     "\n",
     "final = final[~final['idx'].isin(hashes)]\n",
-    "final.to_csv('deduplicated_PC.csv', index=False)\n",
-    "final.to_csv('inputs/deduplicated_PC.csv', index=False)\n"
+    "final.to_csv('2deduplicated_PC.csv', index=False)\n",
+    "final.to_csv('inputs/2deduplicated_PC.csv', index=False)\n"
    ]
   },
   {
